# documentation/dev/apiv2/swagger/prompb/rpc.swagger.json
@@ -15,37 +15,27 @@
     "application/json"
   ],
   "paths": {
-    "/v2/admin/tsdb/delete_series": {
-      "post": {
+    "/admin/v1/series": {
+      "delete": {
         "summary": "DeleteSeries deletes data for a selection of series in a time range.",
         "operationId": "DeleteSeries",
         "responses": {
           "200": {
             "description": "",
             "schema": {
-              "$ref": "#/definitions/prometheusTSDBSeriesDeleteResponse"
+              "$ref": "#/definitions/prometheusSeriesDeleteResponse"
             }
           }
         },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/prometheusTSDBSeriesDeleteRequest"
-            }
-          }
-        ],
         "tags": [
-          "TSDB"
+          "Admin"
         ]
       }
     },
-    "/v2/admin/tsdb/reload": {
+    "/admin/v1/tsdb/reload": {
       "get": {
         "summary": "Reload triggers a reload of block data.",
-        "operationId": "Reload",
+        "operationId": "TSDBReload",
         "responses": {
           "200": {
             "description": "",
@@ -55,14 +45,14 @@
           }
         },
         "tags": [
-          "TSDB"
+          "Admin"
         ]
       }
     },
-    "/v2/admin/tsdb/snapshot": {
+    "/admin/v1/tsdb/snapshot": {
       "get": {
-        "summary": "Snapshot creates a snapshot of all current data into 'snapshots/\u003cdatetime\u003e' under\nthe TSDB's date directory.",
-        "operationId": "Snapshot",
+        "summary": "Snapshot creates a snapshot of all current data into 'snapshots/\u003cdatetime\u003e-\u003crand\u003e' under\nthe TSDB's date directory.",
+        "operationId": "TSDBSnapshot",
         "responses": {
           "200": {
             "description": "",
@@ -72,7 +62,221 @@
           }
         },
         "tags": [
-          "TSDB"
+          "Admin"
+        ]
+      }
+    },
+    "/v2/label/{name}": {
+      "get": {
+        "operationId": "Label",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/prometheusLabelResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Query"
+        ]
+      }
+    },
+    "/v2/query": {
+      "get": {
+        "operationId": "Instant",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/prometheusQueryResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "range.min_time",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "date-time"
+          },
+          {
+            "name": "range.max_time",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "date-time"
+          },
+          {
+            "name": "expr",
+            "description": "PromQL formatted query expression.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Query"
+        ]
+      }
+    },
+    "/v2/query_range": {
+      "get": {
+        "operationId": "Range",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/prometheusQueryResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "range.min_time",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "date-time"
+          },
+          {
+            "name": "range.max_time",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "date-time"
+          },
+          {
+            "name": "step.seconds",
+            "description": "Signed seconds of the span of time. Must be from -315,576,000,000\nto +315,576,000,000 inclusive.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "step.nanos",
+            "description": "Signed fractions of a second at nanosecond resolution of the span\nof time. Durations less than one second are represented with a 0\n`seconds` field and a positive or negative `nanos` field. For durations\nof one second or more, a non-zero value for the `nanos` field must be\nof the same sign as the `seconds` field. Must be from -999,999,999\nto +999,999,999 inclusive.",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "timeout.seconds",
+            "description": "Signed seconds of the span of time. Must be from -315,576,000,000\nto +315,576,000,000 inclusive.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "timeout.nanos",
+            "description": "Signed fractions of a second at nanosecond resolution of the span\nof time. Durations less than one second are represented with a 0\n`seconds` field and a positive or negative `nanos` field. For durations\nof one second or more, a non-zero value for the `nanos` field must be\nof the same sign as the `seconds` field. Must be from -999,999,999\nto +999,999,999 inclusive.",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "expr",
+            "description": "PromQL formatted query expression.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Query"
+        ]
+      }
+    },
+    "/v2/status/alertmanagers": {
+      "get": {
+        "operationId": "Alertmanagers",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/prometheusAlertmanagersResponse"
+            }
+          }
+        },
+        "tags": [
+          "Status"
+        ]
+      }
+    },
+    "/v2/status/config": {
+      "get": {
+        "operationId": "Config",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/prometheusConfigResponse"
+            }
+          }
+        },
+        "tags": [
+          "Status"
+        ]
+      }
+    },
+    "/v2/status/health": {
+      "get": {
+        "operationId": "Health",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/prometheusHealthResponse"
+            }
+          }
+        },
+        "tags": [
+          "Status"
+        ]
+      }
+    },
+    "/v2/status/ready": {
+      "get": {
+        "operationId": "Readiness",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/prometheusReadinessResponse"
+            }
+          }
+        },
+        "tags": [
+          "Status"
+        ]
+      }
+    },
+    "/v2/status/targets": {
+      "get": {
+        "operationId": "Targets",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/prometheusTargetsResponse"
+            }
+          }
+        },
+        "tags": [
+          "Status"
         ]
       }
     }
@@ -87,10 +291,32 @@
       ],
       "default": "UNKNOWN"
     },
+    "prometheusAlertmanager": {
+      "type": "object",
+      "properties": {
+        "url": {
+          "type": "string"
+        }
+      }
+    },
     "prometheusAlertmanagersRequest": {
       "type": "object"
     },
     "prometheusAlertmanagersResponse": {
+      "type": "object",
+      "properties": {
+        "alertmanagers": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/prometheusAlertmanager"
+          }
+        }
+      }
+    },
+    "prometheusConfigRequest": {
+      "type": "object"
+    },
+    "prometheusConfigResponse": {
       "type": "object"
     },
     "prometheusHealthRequest": {
@@ -107,25 +333,6 @@
         },
         "value": {
           "type": "string"
-        }
-      }
-    },
-    "prometheusLabelInfoRequest": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        }
-      }
-    },
-    "prometheusLabelInfoResponse": {
-      "type": "object",
-      "properties": {
-        "values": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
         }
       }
     },
@@ -154,6 +361,25 @@
       ],
       "default": "EQ"
     },
+    "prometheusLabelRequest": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        }
+      }
+    },
+    "prometheusLabelResponse": {
+      "type": "object",
+      "properties": {
+        "values": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
     "prometheusLabels": {
       "type": "object",
       "properties": {
@@ -165,14 +391,35 @@
         }
       }
     },
-    "prometheusQueryRequest": {
+    "prometheusQueryInstantRequest": {
       "type": "object",
       "properties": {
         "range": {
-          "$ref": "#/definitions/prometheusTimeRange"
+          "$ref": "#/definitions/prometheusTimeRange",
+          "description": "Time range for which to return data."
         },
         "expr": {
-          "type": "string"
+          "type": "string",
+          "description": "PromQL formatted query expression."
+        }
+      }
+    },
+    "prometheusQueryRangeRequest": {
+      "type": "object",
+      "properties": {
+        "range": {
+          "$ref": "#/definitions/prometheusTimeRange",
+          "description": "Time range for which to return data."
+        },
+        "step": {
+          "$ref": "#/definitions/protobufDuration"
+        },
+        "timeout": {
+          "$ref": "#/definitions/protobufDuration"
+        },
+        "expr": {
+          "type": "string",
+          "description": "PromQL formatted query expression."
         }
       }
     },
@@ -183,20 +430,6 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/prometheusTimeSeries"
-          }
-        }
-      }
-    },
-    "prometheusRawQueryRequest": {
-      "type": "object",
-      "properties": {
-        "range": {
-          "$ref": "#/definitions/prometheusTimeRange"
-        },
-        "matchers": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/prometheusLabelMatcher"
           }
         }
       }
@@ -220,12 +453,9 @@
         }
       }
     },
-    "prometheusSeriesRequest": {
+    "prometheusSelector": {
       "type": "object",
       "properties": {
-        "range": {
-          "$ref": "#/definitions/prometheusTimeRange"
-        },
         "matchers": {
           "type": "array",
           "items": {
@@ -234,14 +464,26 @@
         }
       }
     },
-    "prometheusSeriesResponse": {
+    "prometheusSeriesDeleteRequest": {
       "type": "object",
       "properties": {
-        "series": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/prometheusLabels"
-          }
+        "range": {
+          "$ref": "#/definitions/prometheusTimeRange"
+        },
+        "selector": {
+          "$ref": "#/definitions/prometheusSelector"
+        },
+        "query": {
+          "type": "string"
+        }
+      }
+    },
+    "prometheusSeriesDeleteResponse": {
+      "type": "object",
+      "properties": {
+        "NumDeleted": {
+          "type": "string",
+          "format": "uint64"
         }
       }
     },
@@ -249,23 +491,6 @@
       "type": "object"
     },
     "prometheusTSDBReloadResponse": {
-      "type": "object"
-    },
-    "prometheusTSDBSeriesDeleteRequest": {
-      "type": "object",
-      "properties": {
-        "range": {
-          "$ref": "#/definitions/prometheusTimeRange"
-        },
-        "matchers": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/prometheusLabelMatcher"
-          }
-        }
-      }
-    },
-    "prometheusTSDBSeriesDeleteResponse": {
       "type": "object"
     },
     "prometheusTSDBSnapshotRequest": {
@@ -286,16 +511,10 @@
           "type": "string"
         },
         "labels": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/prometheusLabel"
-          }
+          "$ref": "#/definitions/prometheusLabels"
         },
         "discovered_labels": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/prometheusLabel"
-          }
+          "$ref": "#/definitions/prometheusLabels"
         },
         "status": {
           "$ref": "#/definitions/prometheusTargetStatus"
@@ -361,19 +580,21 @@
         }
       }
     },
-    "prometheusWriteRequest": {
+    "protobufDuration": {
       "type": "object",
       "properties": {
-        "series": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/prometheusTimeSeries"
-          }
+        "seconds": {
+          "type": "string",
+          "format": "int64",
+          "description": "Signed seconds of the span of time. Must be from -315,576,000,000\nto +315,576,000,000 inclusive."
+        },
+        "nanos": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Signed fractions of a second at nanosecond resolution of the span\nof time. Durations less than one second are represented with a 0\n`seconds` field and a positive or negative `nanos` field. For durations\nof one second or more, a non-zero value for the `nanos` field must be\nof the same sign as the `seconds` field. Must be from -999,999,999\nto +999,999,999 inclusive."
         }
-      }
-    },
-    "prometheusWriteResponse": {
-      "type": "object"
+      },
+      "description": "A Duration represents a signed, fixed-length span of time represented\nas a count of seconds and fractions of seconds at nanosecond\nresolution. It is independent of any calendar and concepts like \"day\"\nor \"month\". It is related to Timestamp in that the difference between\ntwo Timestamp values is a Duration and it can be added or subtracted\nfrom a Timestamp. Range is approximately +-10,000 years.\n\nExample 1: Compute Duration from two Timestamps in pseudo code.\n\n    Timestamp start = ...;\n    Timestamp end = ...;\n    Duration duration = ...;\n\n    duration.seconds = end.seconds - start.seconds;\n    duration.nanos = end.nanos - start.nanos;\n\n    if (duration.seconds \u003c 0 \u0026\u0026 duration.nanos \u003e 0) {\n      duration.seconds += 1;\n      duration.nanos -= 1000000000;\n    } else if (durations.seconds \u003e 0 \u0026\u0026 duration.nanos \u003c 0) {\n      duration.seconds -= 1;\n      duration.nanos += 1000000000;\n    }\n\nExample 2: Compute Timestamp from Timestamp + Duration in pseudo code.\n\n    Timestamp start = ...;\n    Duration duration = ...;\n    Timestamp end = ...;\n\n    end.seconds = start.seconds + duration.seconds;\n    end.nanos = start.nanos + duration.nanos;\n\n    if (end.nanos \u003c 0) {\n      end.seconds -= 1;\n      end.nanos += 1000000000;\n    } else if (end.nanos \u003e= 1000000000) {\n      end.seconds += 1;\n      end.nanos -= 1000000000;\n    }\n\nExample 3: Compute Duration from datetime.timedelta in Python.\n\n    td = datetime.timedelta(days=3, minutes=10)\n    duration = Duration()\n    duration.FromTimedelta(td)"
     }
   }
 }
