# prompb/types.pb.go
@@ -48,8 +48,8 @@ func (x LabelMatcher_Type) String() string {
 func (LabelMatcher_Type) EnumDescriptor() ([]byte, []int) { return fileDescriptorTypes, []int{5, 0} }
 
 type TimeRange struct {
-	MinTime time.Time `protobuf:"bytes,1,opt,name=min_time,json=minTime,stdtime" json:"min_time"`
-	MaxTime time.Time `protobuf:"bytes,2,opt,name=max_time,json=maxTime,stdtime" json:"max_time"`
+	MinTime *time.Time `protobuf:"bytes,1,opt,name=min_time,json=minTime,stdtime" json:"min_time,omitempty"`
+	MaxTime *time.Time `protobuf:"bytes,2,opt,name=max_time,json=maxTime,stdtime" json:"max_time,omitempty"`
 }
 
 func (m *TimeRange) Reset()                    { *m = TimeRange{} }
@@ -57,18 +57,18 @@ func (m *TimeRange) String() string            { return proto.CompactTextString(
 func (*TimeRange) ProtoMessage()               {}
 func (*TimeRange) Descriptor() ([]byte, []int) { return fileDescriptorTypes, []int{0} }
 
-func (m *TimeRange) GetMinTime() time.Time {
+func (m *TimeRange) GetMinTime() *time.Time {
 	if m != nil {
 		return m.MinTime
 	}
-	return time.Time{}
+	return nil
 }
 
-func (m *TimeRange) GetMaxTime() time.Time {
+func (m *TimeRange) GetMaxTime() *time.Time {
 	if m != nil {
 		return m.MaxTime
 	}
-	return time.Time{}
+	return nil
 }
 
 type Sample struct {
@@ -144,7 +144,7 @@ func (m *Label) GetValue() string {
 }
 
 type Labels struct {
-	Labels []*Label `protobuf:"bytes,1,rep,name=labels" json:"labels,omitempty"`
+	Labels []Label `protobuf:"bytes,1,rep,name=labels" json:"labels"`
 }
 
 func (m *Labels) Reset()                    { *m = Labels{} }
@@ -152,7 +152,7 @@ func (m *Labels) String() string            { return proto.CompactTextString(m) 
 func (*Labels) ProtoMessage()               {}
 func (*Labels) Descriptor() ([]byte, []int) { return fileDescriptorTypes, []int{4} }
 
-func (m *Labels) GetLabels() []*Label {
+func (m *Labels) GetLabels() []Label {
 	if m != nil {
 		return m.Labels
 	}
@@ -192,6 +192,22 @@ func (m *LabelMatcher) GetValue() string {
 	return ""
 }
 
+type Selector struct {
+	Matchers []LabelMatcher `protobuf:"bytes,1,rep,name=matchers" json:"matchers"`
+}
+
+func (m *Selector) Reset()                    { *m = Selector{} }
+func (m *Selector) String() string            { return proto.CompactTextString(m) }
+func (*Selector) ProtoMessage()               {}
+func (*Selector) Descriptor() ([]byte, []int) { return fileDescriptorTypes, []int{6} }
+
+func (m *Selector) GetMatchers() []LabelMatcher {
+	if m != nil {
+		return m.Matchers
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterType((*TimeRange)(nil), "prometheus.TimeRange")
 	proto.RegisterType((*Sample)(nil), "prometheus.Sample")
@@ -199,6 +215,7 @@ func init() {
 	proto.RegisterType((*Label)(nil), "prometheus.Label")
 	proto.RegisterType((*Labels)(nil), "prometheus.Labels")
 	proto.RegisterType((*LabelMatcher)(nil), "prometheus.LabelMatcher")
+	proto.RegisterType((*Selector)(nil), "prometheus.Selector")
 	proto.RegisterEnum("prometheus.LabelMatcher_Type", LabelMatcher_Type_name, LabelMatcher_Type_value)
 }
 func (m *TimeRange) Marshal() (dAtA []byte, err error) {
@@ -216,22 +233,26 @@ func (m *TimeRange) MarshalTo(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
-	dAtA[i] = 0xa
-	i++
-	i = encodeVarintTypes(dAtA, i, uint64(github_com_gogo_protobuf_types.SizeOfStdTime(m.MinTime)))
-	n1, err := github_com_gogo_protobuf_types.StdTimeMarshalTo(m.MinTime, dAtA[i:])
-	if err != nil {
-		return 0, err
+	if m.MinTime != nil {
+		dAtA[i] = 0xa
+		i++
+		i = encodeVarintTypes(dAtA, i, uint64(github_com_gogo_protobuf_types.SizeOfStdTime(*m.MinTime)))
+		n1, err := github_com_gogo_protobuf_types.StdTimeMarshalTo(*m.MinTime, dAtA[i:])
+		if err != nil {
+			return 0, err
+		}
+		i += n1
 	}
-	i += n1
-	dAtA[i] = 0x12
-	i++
-	i = encodeVarintTypes(dAtA, i, uint64(github_com_gogo_protobuf_types.SizeOfStdTime(m.MaxTime)))
-	n2, err := github_com_gogo_protobuf_types.StdTimeMarshalTo(m.MaxTime, dAtA[i:])
-	if err != nil {
-		return 0, err
+	if m.MaxTime != nil {
+		dAtA[i] = 0x12
+		i++
+		i = encodeVarintTypes(dAtA, i, uint64(github_com_gogo_protobuf_types.SizeOfStdTime(*m.MaxTime)))
+		n2, err := github_com_gogo_protobuf_types.StdTimeMarshalTo(*m.MaxTime, dAtA[i:])
+		if err != nil {
+			return 0, err
+		}
+		i += n2
 	}
-	i += n2
 	return i, nil
 }
 
@@ -400,6 +421,36 @@ func (m *LabelMatcher) MarshalTo(dAtA []byte) (int, error) {
 	return i, nil
 }
 
+func (m *Selector) Marshal() (dAtA []byte, err error) {
+	size := m.Size()
+	dAtA = make([]byte, size)
+	n, err := m.MarshalTo(dAtA)
+	if err != nil {
+		return nil, err
+	}
+	return dAtA[:n], nil
+}
+
+func (m *Selector) MarshalTo(dAtA []byte) (int, error) {
+	var i int
+	_ = i
+	var l int
+	_ = l
+	if len(m.Matchers) > 0 {
+		for _, msg := range m.Matchers {
+			dAtA[i] = 0xa
+			i++
+			i = encodeVarintTypes(dAtA, i, uint64(msg.Size()))
+			n, err := msg.MarshalTo(dAtA[i:])
+			if err != nil {
+				return 0, err
+			}
+			i += n
+		}
+	}
+	return i, nil
+}
+
 func encodeFixed64Types(dAtA []byte, offset int, v uint64) int {
 	dAtA[offset] = uint8(v)
 	dAtA[offset+1] = uint8(v >> 8)
@@ -430,10 +481,14 @@ func encodeVarintTypes(dAtA []byte, offset int, v uint64) int {
 func (m *TimeRange) Size() (n int) {
 	var l int
 	_ = l
-	l = github_com_gogo_protobuf_types.SizeOfStdTime(m.MinTime)
-	n += 1 + l + sovTypes(uint64(l))
-	l = github_com_gogo_protobuf_types.SizeOfStdTime(m.MaxTime)
-	n += 1 + l + sovTypes(uint64(l))
+	if m.MinTime != nil {
+		l = github_com_gogo_protobuf_types.SizeOfStdTime(*m.MinTime)
+		n += 1 + l + sovTypes(uint64(l))
+	}
+	if m.MaxTime != nil {
+		l = github_com_gogo_protobuf_types.SizeOfStdTime(*m.MaxTime)
+		n += 1 + l + sovTypes(uint64(l))
+	}
 	return n
 }
 
@@ -510,6 +565,18 @@ func (m *LabelMatcher) Size() (n int) {
 	return n
 }
 
+func (m *Selector) Size() (n int) {
+	var l int
+	_ = l
+	if len(m.Matchers) > 0 {
+		for _, e := range m.Matchers {
+			l = e.Size()
+			n += 1 + l + sovTypes(uint64(l))
+		}
+	}
+	return n
+}
+
 func sovTypes(x uint64) (n int) {
 	for {
 		n++
@@ -578,7 +645,10 @@ func (m *TimeRange) Unmarshal(dAtA []byte) error {
 			if postIndex > l {
 				return io.ErrUnexpectedEOF
 			}
-			if err := github_com_gogo_protobuf_types.StdTimeUnmarshal(&m.MinTime, dAtA[iNdEx:postIndex]); err != nil {
+			if m.MinTime == nil {
+				m.MinTime = new(time.Time)
+			}
+			if err := github_com_gogo_protobuf_types.StdTimeUnmarshal(m.MinTime, dAtA[iNdEx:postIndex]); err != nil {
 				return err
 			}
 			iNdEx = postIndex
@@ -608,7 +678,10 @@ func (m *TimeRange) Unmarshal(dAtA []byte) error {
 			if postIndex > l {
 				return io.ErrUnexpectedEOF
 			}
-			if err := github_com_gogo_protobuf_types.StdTimeUnmarshal(&m.MaxTime, dAtA[iNdEx:postIndex]); err != nil {
+			if m.MaxTime == nil {
+				m.MaxTime = new(time.Time)
+			}
+			if err := github_com_gogo_protobuf_types.StdTimeUnmarshal(m.MaxTime, dAtA[iNdEx:postIndex]); err != nil {
 				return err
 			}
 			iNdEx = postIndex
@@ -995,7 +1068,7 @@ func (m *Labels) Unmarshal(dAtA []byte) error {
 			if postIndex > l {
 				return io.ErrUnexpectedEOF
 			}
-			m.Labels = append(m.Labels, &Label{})
+			m.Labels = append(m.Labels, Label{})
 			if err := m.Labels[len(m.Labels)-1].Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
 				return err
 			}
@@ -1148,6 +1221,87 @@ func (m *LabelMatcher) Unmarshal(dAtA []byte) error {
 	}
 	return nil
 }
+func (m *Selector) Unmarshal(dAtA []byte) error {
+	l := len(dAtA)
+	iNdEx := 0
+	for iNdEx < l {
+		preIndex := iNdEx
+		var wire uint64
+		for shift := uint(0); ; shift += 7 {
+			if shift >= 64 {
+				return ErrIntOverflowTypes
+			}
+			if iNdEx >= l {
+				return io.ErrUnexpectedEOF
+			}
+			b := dAtA[iNdEx]
+			iNdEx++
+			wire |= (uint64(b) & 0x7F) << shift
+			if b < 0x80 {
+				break
+			}
+		}
+		fieldNum := int32(wire >> 3)
+		wireType := int(wire & 0x7)
+		if wireType == 4 {
+			return fmt.Errorf("proto: Selector: wiretype end group for non-group")
+		}
+		if fieldNum <= 0 {
+			return fmt.Errorf("proto: Selector: illegal tag %d (wire type %d)", fieldNum, wire)
+		}
+		switch fieldNum {
+		case 1:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Matchers", wireType)
+			}
+			var msglen int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowTypes
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				msglen |= (int(b) & 0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			if msglen < 0 {
+				return ErrInvalidLengthTypes
+			}
+			postIndex := iNdEx + msglen
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.Matchers = append(m.Matchers, LabelMatcher{})
+			if err := m.Matchers[len(m.Matchers)-1].Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
+				return err
+			}
+			iNdEx = postIndex
+		default:
+			iNdEx = preIndex
+			skippy, err := skipTypes(dAtA[iNdEx:])
+			if err != nil {
+				return err
+			}
+			if skippy < 0 {
+				return ErrInvalidLengthTypes
+			}
+			if (iNdEx + skippy) > l {
+				return io.ErrUnexpectedEOF
+			}
+			iNdEx += skippy
+		}
+	}
+
+	if iNdEx > l {
+		return io.ErrUnexpectedEOF
+	}
+	return nil
+}
 func skipTypes(dAtA []byte) (n int, err error) {
 	l := len(dAtA)
 	iNdEx := 0
@@ -1256,30 +1410,32 @@ var (
 func init() { proto.RegisterFile("types.proto", fileDescriptorTypes) }
 
 var fileDescriptorTypes = []byte{
-	// 389 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x92, 0xdf, 0x6a, 0xe2, 0x40,
-	0x14, 0xc6, 0x9d, 0x44, 0xa3, 0x9e, 0xc8, 0x92, 0x1d, 0xbc, 0x10, 0x61, 0xd5, 0xcd, 0x95, 0x0b,
-	0x4b, 0x44, 0x7d, 0x80, 0x65, 0x85, 0xdc, 0xe9, 0x82, 0xa3, 0x57, 0x7b, 0x23, 0x93, 0x32, 0x8d,
-	0x81, 0x4c, 0x12, 0x32, 0xb1, 0xe8, 0x43, 0x14, 0x7a, 0xd3, 0x77, 0xf2, 0xb2, 0x4f, 0xd0, 0x16,
-	0x9f, 0xa4, 0xcc, 0x8c, 0xff, 0xa0, 0xbd, 0x68, 0xef, 0xce, 0x7c, 0xf3, 0x9d, 0xef, 0xfc, 0x72,
-	0x32, 0x60, 0x17, 0xbb, 0x8c, 0x09, 0x2f, 0xcb, 0xd3, 0x22, 0xc5, 0x90, 0xe5, 0x29, 0x67, 0xc5,
-	0x9a, 0x6d, 0x44, 0xbb, 0x1b, 0xa6, 0x69, 0x18, 0xb3, 0x81, 0xba, 0x09, 0x36, 0xb7, 0x83, 0x22,
-	0xe2, 0x4c, 0x14, 0x94, 0x67, 0xda, 0xdc, 0x6e, 0x86, 0x69, 0x98, 0xaa, 0x72, 0x20, 0x2b, 0xad,
-	0xba, 0xf7, 0x08, 0xea, 0xcb, 0x88, 0x33, 0x42, 0x93, 0x90, 0xe1, 0x3f, 0x50, 0xe3, 0x51, 0xb2,
-	0x92, 0xad, 0x2d, 0xd4, 0x43, 0x7d, 0x7b, 0xd4, 0xf6, 0x74, 0xae, 0x77, 0xca, 0xf5, 0x96, 0xa7,
-	0xdc, 0x49, 0x6d, 0xff, 0xdc, 0x2d, 0x3d, 0xbc, 0x74, 0x11, 0xa9, 0xf2, 0x28, 0x91, 0xba, 0x0a,
-	0xa0, 0x5b, 0x1d, 0x60, 0x7c, 0x29, 0x80, 0x6e, 0xa5, 0xee, 0xfe, 0x05, 0x6b, 0x41, 0x79, 0x16,
-	0x33, 0xdc, 0x84, 0xca, 0x1d, 0x8d, 0x37, 0x1a, 0x04, 0x11, 0x7d, 0xc0, 0x3f, 0xa1, 0x71, 0xfe,
-	0xb0, 0x15, 0x17, 0x6a, 0x88, 0x49, 0xec, 0xb3, 0x36, 0x13, 0x2e, 0x03, 0x90, 0x51, 0x0b, 0x96,
-	0x47, 0x4c, 0xe0, 0x5f, 0x60, 0xc5, 0x34, 0x60, 0xb1, 0x68, 0xa1, 0x9e, 0xd9, 0xb7, 0x47, 0xdf,
-	0xbd, 0xcb, 0xd2, 0xbc, 0xa9, 0xbc, 0x21, 0x47, 0x03, 0xfe, 0x0d, 0x55, 0xa1, 0x66, 0xcb, 0x58,
-	0xe9, 0xc5, 0xd7, 0x5e, 0x8d, 0x45, 0x4e, 0x16, 0x77, 0x08, 0x15, 0xd5, 0x8e, 0x31, 0x94, 0x13,
-	0x7a, 0x5c, 0x58, 0x9d, 0xa8, 0xfa, 0x02, 0x6f, 0x28, 0x51, 0x1f, 0xdc, 0x31, 0x58, 0x53, 0x3d,
-	0xea, 0xf3, 0x54, 0xee, 0x23, 0x82, 0x86, 0x52, 0x66, 0xb4, 0xb8, 0x59, 0xb3, 0x1c, 0x0f, 0xa1,
-	0x2c, 0x1f, 0x81, 0x9a, 0xf7, 0x6d, 0xf4, 0xe3, 0x5d, 0xe7, 0xd1, 0xe7, 0x2d, 0x77, 0x19, 0x23,
-	0xca, 0x7a, 0x46, 0x34, 0x3e, 0x42, 0x34, 0xaf, 0x11, 0xfb, 0x50, 0x96, 0x7d, 0xd8, 0x02, 0xc3,
-	0x9f, 0x3b, 0x25, 0x5c, 0x05, 0xf3, 0x9f, 0x3f, 0x77, 0x90, 0x14, 0x88, 0xef, 0x18, 0x4a, 0x20,
-	0xbe, 0x63, 0x4e, 0x9a, 0xfb, 0x43, 0x07, 0x3d, 0x1d, 0x3a, 0xe8, 0xf5, 0xd0, 0x41, 0xff, 0x2d,
-	0x49, 0x91, 0x05, 0x81, 0xa5, 0x7e, 0xf3, 0xf8, 0x2d, 0x00, 0x00, 0xff, 0xff, 0x87, 0x89, 0xbc,
-	0xc5, 0xa8, 0x02, 0x00, 0x00,
+	// 431 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x52, 0x4d, 0x6f, 0xd3, 0x40,
+	0x10, 0xed, 0xda, 0xae, 0xd3, 0x4e, 0x2a, 0x14, 0x56, 0x39, 0x44, 0x91, 0x48, 0x8a, 0x4f, 0x41,
+	0x42, 0x8e, 0x1a, 0x4e, 0xc0, 0x89, 0x48, 0xe6, 0xd4, 0x22, 0x75, 0x93, 0x13, 0x97, 0x6a, 0x5d,
+	0x06, 0xd7, 0x92, 0xd7, 0x6b, 0x79, 0xd7, 0xa8, 0xfd, 0x01, 0xdc, 0xb9, 0xf0, 0x9f, 0x7a, 0xe4,
+	0x17, 0x00, 0xca, 0x2f, 0x41, 0xbb, 0x6b, 0xbb, 0x15, 0x1f, 0xa2, 0xb7, 0xd9, 0x37, 0xef, 0xcd,
+	0x7b, 0xb3, 0xbb, 0x30, 0xd4, 0x37, 0x15, 0xaa, 0xb8, 0xaa, 0xa5, 0x96, 0x14, 0xaa, 0x5a, 0x0a,
+	0xd4, 0x57, 0xd8, 0xa8, 0xe9, 0x2c, 0x93, 0x32, 0x2b, 0x70, 0x69, 0x3b, 0x69, 0xf3, 0x71, 0xf9,
+	0xa1, 0xa9, 0xb9, 0xce, 0x65, 0xe9, 0xb8, 0xd3, 0xf9, 0xef, 0x7d, 0x9d, 0x0b, 0x54, 0x9a, 0x8b,
+	0xaa, 0x25, 0x8c, 0x33, 0x99, 0x49, 0x5b, 0x2e, 0x4d, 0xe5, 0xd0, 0xe8, 0x33, 0x81, 0xc3, 0x6d,
+	0x2e, 0x90, 0xf1, 0x32, 0x43, 0xfa, 0x1a, 0x0e, 0x44, 0x5e, 0x5e, 0x18, 0xe9, 0x84, 0x1c, 0x93,
+	0xc5, 0x70, 0x35, 0x8d, 0xdd, 0xdc, 0xb8, 0x9b, 0x1b, 0x6f, 0xbb, 0xb9, 0xeb, 0xe0, 0xcb, 0x8f,
+	0x39, 0x61, 0x03, 0x91, 0x97, 0x06, 0xb3, 0x62, 0x7e, 0xed, 0xc4, 0xde, 0x83, 0xc5, 0xfc, 0xda,
+	0x60, 0xd1, 0x1b, 0x08, 0x37, 0x5c, 0x54, 0x05, 0xd2, 0x31, 0xec, 0x7f, 0xe2, 0x45, 0xe3, 0x02,
+	0x10, 0xe6, 0x0e, 0xf4, 0x29, 0x1c, 0xf5, 0x0b, 0x5d, 0x08, 0x65, 0x0d, 0x7c, 0x36, 0xec, 0xb1,
+	0x33, 0x15, 0x21, 0x80, 0x19, 0xb5, 0xc1, 0x3a, 0x47, 0x45, 0x9f, 0x41, 0x58, 0xf0, 0x14, 0x0b,
+	0x35, 0x21, 0xc7, 0xfe, 0x62, 0xb8, 0x7a, 0x1c, 0xdf, 0x5d, 0x66, 0x7c, 0x6a, 0x3a, 0xac, 0x25,
+	0xd0, 0xe7, 0x30, 0x50, 0xd6, 0xdb, 0x8c, 0x35, 0x5c, 0x7a, 0x9f, 0xeb, 0x62, 0xb1, 0x8e, 0x12,
+	0x9d, 0xc0, 0xbe, 0x95, 0x53, 0x0a, 0x41, 0xc9, 0xdb, 0x8b, 0x3a, 0x64, 0xb6, 0xbe, 0x0b, 0xef,
+	0x59, 0xd0, 0x1d, 0xa2, 0x97, 0x10, 0x9e, 0x3a, 0xab, 0xe5, 0x7f, 0x53, 0xad, 0x83, 0xdb, 0xef,
+	0xf3, 0xbd, 0x2e, 0x5b, 0xf4, 0x95, 0xc0, 0x91, 0xc5, 0xcf, 0xb8, 0xbe, 0xbc, 0xc2, 0x9a, 0x9e,
+	0x40, 0x60, 0xbe, 0x88, 0x75, 0x7d, 0xb4, 0x7a, 0xf2, 0x87, 0xbe, 0xe5, 0xc5, 0xdb, 0x9b, 0x0a,
+	0x99, 0xa5, 0xf6, 0x41, 0xbd, 0xbf, 0x05, 0xf5, 0xef, 0x07, 0x5d, 0x40, 0x60, 0x74, 0x34, 0x04,
+	0x2f, 0x39, 0x1f, 0xed, 0xd1, 0x01, 0xf8, 0xef, 0x92, 0xf3, 0x11, 0x31, 0x00, 0x4b, 0x46, 0x9e,
+	0x05, 0x58, 0x32, 0xf2, 0xa3, 0xb7, 0x70, 0xb0, 0xc1, 0x02, 0x2f, 0xb5, 0xac, 0xe9, 0x2b, 0xf3,
+	0xf0, 0xd6, 0xb5, 0x5b, 0x6b, 0xf2, 0xaf, 0x58, 0xed, 0x76, 0x3d, 0x7f, 0x3d, 0xbe, 0xdd, 0xcd,
+	0xc8, 0xb7, 0xdd, 0x8c, 0xfc, 0xdc, 0xcd, 0xc8, 0xfb, 0xd0, 0xc8, 0xaa, 0x34, 0x0d, 0xed, 0x87,
+	0x79, 0xf1, 0x2b, 0x00, 0x00, 0xff, 0xff, 0xaa, 0xac, 0xce, 0x98, 0x0e, 0x03, 0x00, 0x00,
 }
